[fix] close button and modal title overlap.

--- a/client/src/components/common/modal/ConfirmModal/ConfirmModal.scss
+++ b/client/src/components/common/modal/ConfirmModal/ConfirmModal.scss
@@ -43,8 +43,9 @@
 
   &__title {
     font-size: 1.5rem;
-    flex-grow: 1;
-    margin-right: 1em;
+    flex-grow: 0;
+    width: 80%;
+    overflow-wrap: break-word;
 
     &::first-letter {
       text-transform: uppercase;
